<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.mywings.questionset.AddTaskDetail"
        tools:showIn="@layout/layout_add_task_detail">

        <LinearLayout
            android:id="@+id/task_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/txtTitle"
                android:text="@string/lbl_enter_title"
                android:textColor="?attr/colorAccent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLines="1">

            </android.support.design.widget.TextInputEditText>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:labelFor="@+id/txtStartDate"
                android:text="@string/lbl_select_start_date"
                android:textColor="?attr/colorAccent" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none"
                android:maxLines="1" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:labelFor="@+id/txtEndDate"
                android:text="@string/lbl_select_end_date"
                android:textColor="?attr/colorAccent" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:imeActionId="@+id/action_done"
                android:imeActionLabel="@string/lbl_save"
                android:imeOptions="actionUnspecified"
                android:inputType="none"
                android:maxLines="1" />

        </LinearLayout>
    </ScrollView>
</layout>