<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <import type="com.mywings.questionset.Util.BindingUtils" />

        <import type="android.graphics.drawable.Drawable" />

        <variable
            name="context"
            type="android.content.Context" />


        <variable
            name="questionlist"
            type="com.mywings.questionset.Model.Question" />

    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="9dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="9dp">




            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtQuestion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@{questionlist.question}"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtOptionA"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@{questionlist.optionA}"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"
                app:drawableLeft='@{questionlist.answer.trim().equalsIgnoreCase("1") ? @drawable/shape_bullet_green : @drawable/shape_bullet}' />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtOptionB"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@{questionlist.optionB}"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"
                app:drawableLeft='@{questionlist.answer.trim().equalsIgnoreCase("2") ? @drawable/shape_bullet_green : @drawable/shape_bullet}' />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtOptionC"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@{questionlist.optionC}"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"
                app:drawableLeft='@{questionlist.answer.trim().equalsIgnoreCase("3") ? @drawable/shape_bullet_green : @drawable/shape_bullet}' />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtOptionD"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:drawablePadding="5dp"
                android:padding="5dp"
                android:text="@{questionlist.optionD}"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"
                app:drawableLeft='@{questionlist.answer.trim().equalsIgnoreCase("4") ? @drawable/shape_bullet_green : @drawable/shape_bullet}' />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:weightSum="90">

                <ImageView
                    android:id="@+id/imgLike"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"

                    android:contentDescription="@string/like"
                    android:src='@{questionlist.isLike.trim().equalsIgnoreCase("1") ? @drawable/like_rate_vote_ok_thumbs_re : @drawable/like_rate_vote_ok_thumbs_up}' />

                <ImageView
                    android:id="@+id/imgFavourite"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"

                    android:contentDescription="@string/favorite"
                    android:src='@{questionlist.isFavourite.trim().equalsIgnoreCase("1") ? @drawable/btn_star_big_on_pressed : @drawable/btn_star_big_on_disable}' />

                <ImageView
                    android:id="@+id/imgShare"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:contentDescription="@string/share"
                    android:src="@drawable/ic_menu_share_holo_light" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>